# pyGATB

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.rst  setup.cfg  setup.py
cmake/: CheckLTO.cmake  ReplicatePythonSourceTree.cmake  UseCython.cmake
doc/: demo.ipynb
docker/: CMakeLists.py  Dockerfile.alpine_compiler  Dockerfile.alpine_runtime  Dockerfile.manylinux  Dockerfile.py  README.md  build-alpine-containers.sh  build-debian.sh  build-manylinux-inner.sh  build-manylinux.sh  py-gatb-compile.sh
docker/context/: build-manylinux.sh  build.sh  install-cmake.sh
include/: c_bank.pxd  c_graph.pxd  c_tools.pxd
samples/: notebook.ipynb  read_album.py  read_h5.py  read_seq.py
src/: CMakeLists.txt  __init__.py  bank.pyi  bank.pyx  core.pyx  graph.pyi  graph.pyx  plot_graph.py
tests/: __init__.py  test_bank.py  test_graph.py  test_package.py
